[project]
name = "video-downloader"
version = "3.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2",
  "yt-dlp==2024.8.1",
  "pillow==10.4.0",
  "moviepy==0.2.3.1",
  "mutagen==1.47.0",
  "bs4==0.0.2",
  "ffmpeg-python==0.2.0",
  "imageio_ffmpeg==0.5.1"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.github.BluDolphin"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Video-Downloader"

# company name to display in about app dialogs
company = "BluDolphin"

# copyright text to display in about app dialogs
copyright = "Null"

# compile options
#compile.app = true # --compile-app
compile.packages = true # --compile-packages
#compile.cleanup = true # --cleanup-on-compile

[tool.flet.app]
path = "src"